adds repository tests